--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "bodapaola",
   "version": "0.1.0",
+  "homepage": "https://franciscopaz199.github.io/bodaSaulYPaola",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -8,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "flowbite": "^2.2.0",
     "flowbite-react": "^0.7.0",
+    "gh-pages": "^6.1.0",
     "preline": "^2.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -15,6 +17,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
